fix: services size on mobile

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -268,6 +268,7 @@ $gutter-width: 48px;
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-shrink: 0;
         width: 140px;
         height: 140px;
         border-radius: 50%;
